[package]
name = "lets-encrypt-warp"
version = "0.2.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"

description = "Simple use of letsencrypt.org with warp"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/droundy/lets-encrypt-warp"

[dependencies]

acme-lib = "0.5.0"
warp = { version = ">=0.2", features = ["tls"] }
futures = "0.3.1"
tokio = "0.2.9"
x509-parser = "0.6.0"
