[package]
name = "lets-encrypt-warp"
version = "0.2.1"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"

description = "Simple use of letsencrypt.org with warp"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/droundy/lets-encrypt-warp"

[dependencies]

acme-lib = "0.8.2"
openssl-sys = { version = "0.9.77", features = ["vendored"]}
warp = { version = "0.2.0", features = ["tls"] }
futures = "0.3.1"
tokio = "0.2.9"
x509-parser = "0.6.0"
