[package]
name = "lets-encrypt-warp"
version = "0.3.1"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2021"

description = "Simple use of letsencrypt.org with warp"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/droundy/lets-encrypt-warp"

[dependencies]

acme-lib = "0.9.1"
openssl-sys = { version = "0.9.77", features = ["vendored"]}
warp = { version = "0.3.3", features = ["tls"] }
futures = "0.3.1"
tokio = { version = "1.22.0", features = ["time", "rt"] }
x509-parser = "0.6.0"
